--- a/pream/FeedView/Feed.storyboard
+++ b/pream/FeedView/Feed.storyboard
@@ -56,25 +56,17 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="77"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="PREAM 유저들이 만든" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xrt-Xt-o26">
-                                                    <rect key="frame" x="20" y="20" width="132" height="18"/>
-                                                    <fontDescription key="fontDescription" name="AppleSDGothicNeo-Medium" family="Apple SD Gothic Neo" pointSize="15"/>
-                                                    <color key="textColor" name="greyishBrownTwo"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="다양한 필터들을 둘러보세요!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yE2-CK-Qrc">
-                                                    <rect key="frame" x="20" y="48" width="168" height="24"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Download your favorite filters!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yE2-CK-Qrc">
+                                                    <rect key="frame" x="20" y="20" width="191" height="52"/>
                                                     <fontDescription key="fontDescription" name="AppleSDGothicNeo-Medium" family="Apple SD Gothic Neo" pointSize="15"/>
                                                     <color key="textColor" name="greyishBrownTwo"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="yE2-CK-Qrc" firstAttribute="top" secondItem="ZCB-bB-bwS" secondAttribute="top" constant="20" id="50y-3d-YdJ"/>
                                                 <constraint firstItem="yE2-CK-Qrc" firstAttribute="leading" secondItem="ZCB-bB-bwS" secondAttribute="leading" constant="20" id="HNu-Lx-qel"/>
                                                 <constraint firstAttribute="bottom" secondItem="yE2-CK-Qrc" secondAttribute="bottom" constant="5" id="RaU-fQ-x5Y"/>
-                                                <constraint firstItem="yE2-CK-Qrc" firstAttribute="top" secondItem="xrt-Xt-o26" secondAttribute="bottom" constant="10" id="mL2-PY-vlM"/>
-                                                <constraint firstItem="xrt-Xt-o26" firstAttribute="leading" secondItem="ZCB-bB-bwS" secondAttribute="leading" constant="20" id="vTp-68-UH5"/>
-                                                <constraint firstItem="xrt-Xt-o26" firstAttribute="top" secondItem="ZCB-bB-bwS" secondAttribute="top" constant="20" id="zZG-Wa-kIy"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
